--- a/assets/style.css
+++ b/assets/style.css
@@ -2,6 +2,7 @@
 
 *{
 	box-sizing:border-box;
+	-moz-box-sizing:border-box;
 }
 
 *[hidden]{
@@ -72,7 +73,6 @@ aside{
 	bottom:0;
 	left:0;
 	right:0;
-	text-align:center;
 	padding:1em;
 }
 
